objects/AdminTriggerToggle__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>BypassSampleUpdateTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Sample Update Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Account_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to deactivate the Account Triggers</inlineHelpText>
        <label>Bypass Account Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Address_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Address Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Affiliation_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to deactivate the Affiliation Triggers</inlineHelpText>
        <label>Bypass Affiliation Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Contact_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Contact Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Veeva_Contact_Affiliation_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Veeva Contact Affiliation Trigger</label>
        <type>Checkbox</type>
    </fields>
    <label>Admin Trigger Toggle</label>
</CustomObject>